<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    
    
    <RadioGroup
        android:id="@+id/music_radio_group"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="15dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        
        <RadioButton
            android:checked="true"
            android:id="@+id/rain_radio_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/whitenoise_rain"/>

        <RadioButton
            android:id="@+id/nature_radio_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/whitenoise_nature"/>

        <RadioButton
            android:id="@+id/stars_radio_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/whitenoise_stars"/>

    </RadioGroup>




    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <FrameLayout
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"/>

        <Button
            android:layout_marginBottom="5dp"
            android:id="@+id/select_music_negative"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@null"
            android:text="@string/negative"/>

        <Button
            android:layout_marginBottom="5dp"
            android:id="@+id/select_music_positive"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@null"
            android:text="@string/positive"/>

    </LinearLayout>

</LinearLayout>