<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_margin="10dp">


    <android.support.design.widget.TextInputLayout
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="15dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/create_todo_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/create_todo_hint1"
            android:maxLength="20"
            android:maxLines="1"/>

    </android.support.design.widget.TextInputLayout>


    <android.support.design.widget.TextInputLayout
        android:id="@+id/create_time_todo_layout"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="30dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <EditText
            android:id="@+id/create_todo_time"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:hint="@string/create_todo_hint2"
            android:maxLength="3"
            android:maxLines="1"/>

    </android.support.design.widget.TextInputLayout>

    <TextView
        android:layout_marginTop="10dp"
        android:layout_marginStart="21dp"
        android:layout_marginEnd="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/new_tomatotodo"/>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <FrameLayout
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"/>

        <Button
            android:layout_marginBottom="5dp"
            android:id="@+id/create_to_do_negative"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@null"
            android:text="@string/negative"/>

        <Button
            android:layout_marginBottom="5dp"
            android:id="@+id/create_to_do_positive"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@null"
            android:text="@string/positive"/>

    </LinearLayout>

</LinearLayout>