<?xml version="1.0" encoding="utf-8"?>


<android.support.v4.widget.NestedScrollView android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


    <android.support.v7.widget.CardView
        android:id="@+id/static_cardview_1"
        android:layout_margin="10dp"
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:elevation="5dp">

        <LinearLayout
            android:layout_marginLeft= "10dp"
            android:layout_marginRight= "10dp"
            android:layout_marginTop= "5dp"
            android:layout_marginBottom="5dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                    android:text="@string/statics_1"
                    android:textSize="13sp"
                    android:textColor="#fff"
                    android:layout_width="match_parent"
                    android:layout_marginBottom="3dp"
                    android:layout_height="wrap_content"
                     />

            <View
                     android:layout_height="1px"
                     android:layout_width="match_parent"
                     android:background="#fff" />

            <LinearLayout
                android:layout_marginTop="3dp"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="horizontal">

                <FrameLayout
                    android:layout_width="0dp"
                    android:layout_weight="0.25"
                    android:layout_height="match_parent"/>

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1.5"
                    android:text="@string/statics_2"
                    android:textColor="#eeeeee"
                    android:textSize="12sp"
                    android:gravity="center_horizontal"
                    android:singleLine="true"/>

                <FrameLayout
                    android:layout_width="0dp"
                    android:layout_weight="3"
                    android:layout_height="match_parent"/>

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="3"
                    android:text="@string/statics_3"
                    android:textColor="#eeeeee"
                    android:textSize="12sp"
                    android:gravity="center_horizontal"
                    android:singleLine="true"/>

                <FrameLayout
                    android:layout_width="0dp"
                    android:layout_weight="3"
                    android:layout_height="match_parent"/>

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1.5"
                    android:text="@string/statics_4"
                    android:textColor="#eeeeee"
                    android:textSize="12sp"
                    android:gravity="center_horizontal"
                    android:singleLine="true"/>

                <FrameLayout
                    android:layout_width="0dp"
                    android:layout_weight="0.25"
                    android:layout_height="match_parent"/>


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="2">

                <FrameLayout
                    android:layout_width="0dp"
                    android:layout_weight="0.25"
                    android:layout_height="match_parent"/>

                <TextView
                    android:id="@+id/cardview1_statics1"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1.5"
                    android:gravity="center_horizontal"
                    android:textColor="#fff"
                    android:textSize="20sp"/>

                <FrameLayout
                    android:layout_width="0dp"
                    android:layout_weight="3"
                    android:layout_height="match_parent"/>

                <TextView
                    android:id="@+id/cardview1_statics2"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:singleLine="true"
                    android:layout_weight="3"
                    android:gravity="center_horizontal"
                    android:textColor="#fff"
                    android:textSize="20sp"/>

                <FrameLayout
                    android:layout_width="0dp"
                    android:layout_weight="3"
                    android:layout_height="match_parent"/>

                <TextView
                    android:id="@+id/cardview1_statics3"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1.5"
                    android:gravity="center_horizontal"
                    android:textColor="#fff"
                    android:textSize="20sp"/>

                <FrameLayout
                    android:layout_width="0dp"
                    android:layout_weight="0.25"
                    android:layout_height="match_parent"/>



            </LinearLayout>

        </LinearLayout>






    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:id="@+id/static_cardview_2"
        android:layout_width="match_parent"
        android:layout_margin="10dp"
        android:layout_height="150dp"
        android:layout_below="@id/static_cardview_1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft= "10dp"
            android:layout_marginRight= "10dp"
            android:layout_marginTop= "5dp"
            android:layout_marginBottom="5dp"
            android:orientation="vertical">

            <TextView
                android:text="@string/statics_5"
                android:textSize="13sp"
                android:layout_width="match_parent"
                android:layout_marginBottom="3dp"
                android:layout_height="wrap_content"
                android:textColor="#fff" />

            <View
                android:layout_height="1px"
                android:layout_width="match_parent"
                android:background="#fff" />


        <RelativeLayout
            android:layout_marginTop="5dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/cardview2_text11"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:textColor="#fafafa"
                android:textSize="13sp"
                android:singleLine="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true" />

            <TextView
                android:id="@+id/cardview2_text12"
                android:paddingRight="20dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#fafafa"
                android:textSize="13sp"
                android:singleLine="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentTop="true" />

            <TextView
                android:id="@+id/cardview2_text21"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:textColor="#fafafa"
                android:textSize="13sp"
                android:singleLine="true"
                android:layout_below="@+id/cardview2_text11"
                android:layout_marginTop="3dp"/>

            <TextView
                android:id="@+id/cardview2_text22"
                android:paddingRight="20dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#fafafa"
                android:textSize="13sp"
                android:singleLine="true"
                android:layout_alignParentRight="true"
                android:layout_below="@+id/cardview2_text12"
                android:layout_marginTop="3dp"/>

            <TextView
                android:id="@+id/cardview2_text31"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:textColor="#fafafa"
                android:textSize="13sp"
                android:singleLine="true"
                android:layout_below="@+id/cardview2_text21"
                android:layout_marginTop="3dp"/>

            <TextView
                android:id="@+id/cardview2_text32"
                android:paddingRight="20dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#fafafa"
                android:textSize="13sp"
                android:singleLine="true"
                android:layout_below="@+id/cardview2_text22"
                android:layout_alignParentRight="true"
                android:layout_marginTop="3dp"/>

            <TextView
                android:id="@+id/cardview2_text41"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:textColor="#fafafa"
                android:textSize="13sp"
                android:singleLine="true"
                android:layout_below="@+id/cardview2_text31"
                android:layout_marginTop="3dp"/>

            <TextView
                android:id="@+id/cardview2_text42"
                android:paddingRight="20dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#fafafa"
                android:textSize="13sp"
                android:singleLine="true"
                android:layout_below="@+id/cardview2_text32"
                android:layout_alignParentRight="true"
                android:layout_marginTop="3dp"/>

            <TextView
                android:id="@+id/cardview2_text51"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:textColor="#fafafa"
                android:textSize="13sp"
                android:singleLine="true"
                android:layout_below="@+id/cardview2_text41"
                android:layout_marginTop="3dp"/>

            <TextView
                android:id="@+id/cardview2_text52"
                android:paddingRight="20dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#fafafa"
                android:textSize="13sp"
                android:singleLine="true"
                android:layout_below="@+id/cardview2_text42"
                android:layout_alignParentRight="true"
                android:layout_marginTop="3dp"/>


        </RelativeLayout>

        </LinearLayout>

    </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:id="@+id/static_cardview_3"
                android:layout_below="@id/static_cardview_2"
                android:layout_gravity="center_horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:foreground="?android:attr/selectableItemBackground">

                <LinearLayout
                    android:layout_marginLeft= "10dp"
                    android:layout_marginRight= "10dp"
                    android:layout_marginTop= "5dp"
                    android:layout_marginBottom="5dp"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:text="@string/achievements_statics"
                        android:textSize="13sp"
                        android:layout_width="match_parent"
                        android:layout_marginBottom="3dp"
                        android:layout_height="wrap_content"
                        android:textColor="#fff" />

                    <View
                        android:layout_height="1px"
                        android:layout_width="match_parent"
                        android:background="#fff" />
                    
                    <LinearLayout
                        android:layout_marginTop="5dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <FrameLayout
                            android:layout_width="0dp"
                            android:layout_weight="2"
                            android:layout_height="match_parent"/>

                        <TextView
                            android:text="@string/statics_6"
                            android:gravity="center_horizontal"
                            android:textSize="12sp"
                            android:textColor="#fff"
                            android:layout_width="0dp"
                            android:layout_weight="2"
                            android:layout_height="match_parent" />

                        <FrameLayout
                            android:layout_width="0dp"
                            android:layout_weight="4"
                            android:layout_height="match_parent"/>

                        <TextView
                            android:text="@string/statics_7"
                            android:gravity="center_horizontal"
                            android:layout_width="0dp"
                            android:textSize="12sp"
                            android:textColor="#fff"
                            android:layout_weight="2"
                            android:layout_height="match_parent" />

                        <FrameLayout
                            android:layout_width="0dp"
                            android:layout_weight="2"
                            android:layout_height="match_parent"/>

                    </LinearLayout>

                    <LinearLayout
                        android:layout_marginTop="5dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <FrameLayout
                            android:layout_width="0dp"
                            android:layout_weight="2"
                            android:layout_height="match_parent"/>

                        <TextView
                            android:id="@+id/cardview3_statics1"
                            android:textColor="#fff"
                            android:layout_width="0dp"
                            android:layout_weight="2"
                            android:textSize="20sp"
                            android:gravity="center_horizontal"
                            android:layout_height="match_parent" />

                        <FrameLayout
                            android:layout_width="0dp"
                            android:layout_weight="4"
                            android:layout_height="match_parent"/>

                        <TextView
                            android:id="@+id/cardview3_statics2"
                            android:layout_width="0dp"
                            android:textSize="20sp"
                            android:gravity="center_horizontal"
                            android:textColor="#fff"
                            android:layout_weight="2"
                            android:layout_height="match_parent" />

                        <FrameLayout
                            android:layout_width="0dp"
                            android:layout_weight="2"
                            android:layout_height="match_parent"/>

                    </LinearLayout>

                    <View
                        android:layout_marginTop="5dp"
                        android:layout_height="1px"
                        android:layout_width="match_parent"
                        android:background="#fff" />

                    <TextView
                        android:layout_marginTop="5dp"
                        android:layout_marginBottom="10dp"
                        android:text="@string/recent_achievement"
                        android:layout_width="match_parent"
                        android:textColor="#fff"
                        android:layout_height="wrap_content"
                        android:textSize="12sp" />

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">


                        <ImageView
                            android:layout_marginStart="10dp"
                            android:layout_marginEnd="10dp"
                            android:layout_marginBottom="10dp"
                            android:id="@+id/achievement_icon"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentLeft="true" />

                    <TextView
                        android:id="@+id/achievement_name"
                        android:textColor="#fff"
                        android:textSize="20sp"
                        android:layout_toRightOf="@+id/achievement_icon"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />


                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentRight="true"
                            android:textSize="16sp"
                            android:textColor="#fff"
                            android:id="@+id/achievement_point"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentRight="true"
                            android:layout_below="@+id/achievement_point"
                            android:textColor="#fff"
                            android:textSize="12sp"
                            android:id="@+id/achievement_date"/>

                    </RelativeLayout>




                </LinearLayout>




            </android.support.v7.widget.CardView>




    </RelativeLayout>

</android.support.v4.widget.NestedScrollView>
